<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="100"
    tools:context="com.example.muhammadfarhanbashir.gharkhana.fragments.LoginFragment">

    <ImageView
        android:layout_weight="40"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/textSmall"
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/login_long_text"/>

    <EditText
        style="@style/textSmall"
        android:layout_weight="10"
        android:hint="@string/prompt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_textbox"
        android:inputType="textEmailAddress"/>

    <EditText
        style="@style/textNormal"
        android:layout_weight="10"
        android:hint="@string/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_textbox"
        android:inputType="textPassword"/>

    <Button
        android:background="@drawable/round_button_green"
        style="@style/mainGreenButton"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:onClick="login"
        android:text="@string/login_text"/>

    <TextView
        android:layout_marginTop="10dp"
        style="@style/textNormal"
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_text"
        android:textAlignment="center"/>
    <TextView
        style="@style/textNormalGreen"
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account_text"
        android:onClick="gotoSignup"
        android:clickable="true"
        android:textAlignment="center"/>

</LinearLayout>
