<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.muhammadfarhanbashir.gharkhana.fragments.ChefItemsFragment">

    <TextView
        style="@style/textNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_category"/>
    <Spinner
        android:spinnerMode="dropdown"
        android:background="@drawable/border_bottom"
        android:id="@+id/category_dropdown"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>


    <TextView
        android:paddingTop="10dp"
        style="@style/textNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_name"/>
    <EditText
        android:layout_marginTop="10dp"
        android:background="@drawable/border_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_name"
        android:inputType="text"
        />

    <TextView
        android:paddingTop="10dp"
        style="@style/textNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_price"/>
    <EditText
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_price"
        />

    <TextView
        android:paddingTop="10dp"
        style="@style/textNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_serving"/>
    <EditText
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_serving"
        />

    <TextView
        android:paddingTop="10dp"
        style="@style/textNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/additional"/>
    <EditText
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/additional"
        />

    <TextView
        android:paddingTop="10dp"
        style="@style/textNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_taken"/>
    <EditText
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time_taken"
        />

    <TextView
        android:paddingTop="10dp"
        style="@style/textNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"/>
    <EditText
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:minLines="4"
        android:maxLines="8"
        android:gravity="top|left"
        android:background="@drawable/border_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_description"
        />

    <Button
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button_green"
        style="@style/mainGreenButton"
        android:id="@+id/add_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_item"/>

</LinearLayout>

</ScrollView>
