<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.muhammadfarhanbashir.gharkhana.fragments.SignupFragment">

        <TextView
            android:id="@+id/role_name_heading"
            style="@style/textNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/role"/>
        <RadioGroup
            android:layout_marginTop="10dp"
            android:id="@+id/role_radio"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                style="@style/textSmall"
                android:checked="true"
                android:id="@+id/consumer_radio"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/consumer"/>
            <RadioButton
                style="@style/textSmall"
                android:id="@+id/chef_radio"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/chef"/>

        </RadioGroup>

        <TextView
            android:paddingTop="10dp"
            style="@style/textNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name"/>
        <EditText
            android:padding="10dp"
            style="@style/textSmall"
            android:background="@drawable/border_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fname_textbox"
            android:inputType="text"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/lname_heading"
            android:paddingTop="10dp"
            style="@style/textNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nick Name"/>
        <EditText
            android:visibility="gone"
            android:padding="10dp"
            style="@style/textSmall"
            android:background="@drawable/border_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lname_textbox"
            android:inputType="text"/>

        <TextView
            style="@style/textNormal"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile"/>
        <EditText
            android:padding="10dp"
            style="@style/textSmall"
            android:background="@drawable/border_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/number_textbox"
            android:inputType="phone"/>

        <TextView
            style="@style/textNormal"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"/>
        <EditText
            android:padding="10dp"
            style="@style/textSmall"
            android:background="@drawable/border_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address_textbox"
            android:inputType="text"/>


        <TextView
            style="@style/textNormal"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"/>
        <EditText
            android:padding="10dp"
            style="@style/textSmall"
            android:background="@drawable/border_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_textbox"
            android:inputType="textEmailAddress"/>

        <!--<View-->
            <!--android:layout_marginBottom="15dp"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="@color/colorBlack"/>-->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/textNormal"
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"/>
            <TextView
                android:clickable="true"
                android:paddingLeft="10dp"
                android:id="@+id/show_hide_password"
                android:text="(Show Password)"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <EditText
            android:padding="10dp"
            style="@style/textSmall"
            android:background="@drawable/border_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_textbox"
            android:inputType="textPassword"/>

        <!--<View-->
            <!--android:layout_marginBottom="15dp"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="@color/colorBlack"/>-->

        <Button
            android:layout_marginTop="10dp"
            android:background="@drawable/round_button_green"
            style="@style/mainGreenButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_button"
            android:onClick="signup"
            android:text="@string/signup_text"/>

    </LinearLayout>
</ScrollView>
