<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.muhammadfarhanbashir.gharkhana.fragments.SignupFragment">

    <RelativeLayout
        android:id="@+id/update_location_layout"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="40dp">

        <TextView
            android:layout_width="wrap_content"
            style="@style/itemPageButton"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp"
            android:layout_height="wrap_content"
            android:id="@+id/profile_notification_bar"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_height="match_parent">
        <TextView
            style="@style/textNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"/>
        <EditText
            style="@style/textSmall"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/border_bottom"
            android:hint="First Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fname_textbox"
            android:inputType="text"/>


        <TextView
            android:paddingTop="10dp"
            style="@style/textNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"/>
        <EditText
            style="@style/textSmall"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/border_bottom"
            android:hint="Last Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lname_textbox"
            android:inputType="text"/>


        <TextView
            android:paddingTop="10dp"
            style="@style/textNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile"/>
        <EditText
            style="@style/textSmall"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/border_bottom"
            android:hint="Contact Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/number_textbox"
            android:inputType="phone"/>


        <TextView
            android:paddingTop="10dp"
            style="@style/textNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"/>
        <EditText
            style="@style/textSmall"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/border_bottom"
            android:hint="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address_textbox"
            android:inputType="text"/>


        <TextView
            android:paddingTop="10dp"
            style="@style/textNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"/>
        <EditText
            style="@style/textSmall"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/border_bottom"
            android:hint="Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_textbox"
            android:inputType="textEmailAddress"/>

        <!--<View-->
        <!--android:layout_marginBottom="15dp"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@color/colorBlack"/>-->

        <!--<TextView-->
        <!--style="@style/textNormal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/password"/>-->
        <!--<EditText-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:padding="10dp"-->
        <!--android:background="@color/colorWhite"-->
        <!--android:hint="Password"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/password_textbox"-->
        <!--android:inputType="textEmailAddress"/>-->

        <!--<View-->
        <!--android:layout_marginBottom="15dp"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@color/colorBlack"/>-->

        <Button
            android:layout_marginTop="10dp"
            android:background="@drawable/round_button_green"
            style="@style/mainGreenButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/update_profile_button"
            android:text="Update Profile"/>
    </LinearLayout>



</LinearLayout>
</ScrollView>